<resources>
    <string name="app_name">Peek2S</string>
    <string name="app_name_neutral">Quick View</string>


    <string name="video_player_best_fit">最为合适</string>
    <string name="video_player_fit_horizontal">水平匹配</string>
    <string name="video_player_fit_vertical">垂直匹配</string>
    <string name="video_player_fill">填充</string>
    <string name="video_player_16x9">16:9</string>
    <string name="video_player_4x3">4:3</string>
    <string name="video_player_original">居中</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="clear">清空</string>
    <string name="record_miaoshu">抓拍-缺陷描述</string>
    <string name="record_task_id">任务编号</string>
    <string name="record_task_name">任务名称</string>
    <string name="record_task_place">检测地点</string>
    <string name="record_task_start">起始井号</string>
    <string name="record_task_end">结束井号</string>
    <string name="record_task_direction">检测方向</string>
    <string name="record_task_sort">管道类型</string>
    <string name="record_task_guancai">  管材</string>
    <string name="record_task_diameter">管径</string>
    <string name="record_task_pipeLength">管长</string>
    <string name="record_task_wellHeight">井高</string>
    <string name="record_task_computer">检测单位</string>
    <string name="record_task_people">检测员</string>

    <string name="record_task_id_e">任务编号:</string>
    <string name="record_task_name_e">任务名称:</string>
    <string name="record_task_place_e">检测地点:</string>
    <string name="record_task_start_e">起始井号:</string>
    <string name="record_task_end_e">结束井号:</string>
    <string name="record_task_direction_e">检测方向:</string>
    <string name="record_task_sort_e">管道类型:</string>
    <string name="record_task_guancai_e">管材:</string>
    <string name="record_task_diameter_e">管径(mm):</string>
    <string name="record_task_computer_e">检测单位:</string>
    <string name="record_task_people_e">检测员:</string>

    <string name="task_name_id">任务名称/编号:</string>
    <string name="task_date">日期:</string>
    <string name="task_well_start_end">起始井—结束井:</string>
    <string name="task_diameter">管径:</string>

    <string name="record_task_beizhu_e">备注:</string>
    <string name="edit">编辑</string>

    <string name="capture_guandao_xuhao">序号</string>
    <string name="capture_guandao_id">管道号</string>
    <string name="capture_quexian_list">缺陷列表：</string>
    <string name="capture_quexian_style">类型</string>
    <string name="capture_quexian_name">缺陷名</string>
    <string name="capture_quexian_grade">等级</string>
    <string name="capture_quexian_distance">距离(m)</string>
    <string name="capture_quexian_clock">时钟表示</string>
    <string name="capture_quexian_length">长度(m)</string>

    <string name="capture_guandao_id_e">管道号：</string>
    <string name="capture_quexian_style_e">类型:</string>
    <string name="capture_quexian_name_e">缺陷名:</string>
    <string name="capture_quexian_grade_e">等级:</string>
    <string name="capture_quexian_distance_e">距离(m):</string>
    <string name="capture_quexian_clock_e">时钟表示:</string>
    <string name="capture_quexian_length_e">长度(m):</string>
    <string name="capture_quexian_detail_e">描述：</string>
    <string name="mainFrame">主机:</string>
    <string name="repeater">中继:</string>
    <string name="notLink">未连接</string>
    <string name="link">连接</string>
    <string name="record_task_well_height_edt_e">井高(m):</string>
    <string name="record_task_pipe_length_e">管长(m):</string>
    <string name="record_task_regional_important_e">地区重要性:</string>
    <string name="record_task_soil_effect_e">土质影响:</string>
    <string name="capture">抓拍</string>
    <string name="biaoji">标记</string>
    <string name="celiang">测距</string>
    <string name="record">录像</string>
    <string name="battery">主机电量</string>
    <string name="power_switch">关闭</string>
    <string name="setting">配置</string>
    <string name="firstConnectState">未连接</string>
    <string name="angle">0°</string>
    <string name="backVideo">回放</string>
    <string name="picture">图片</string>
    <string name="chuWu">除雾</string>
    <string name="locate">定位</string>
    <string name="goBack">返回</string>
    <string name="delete">删除</string>
    <string name="connect">连接成功</string>
    <string name="disconnect">连接断开</string>
    <string name="lowBattery">低电量</string>
    <string name="battery_system">终端电量</string>
    <string name="add_textToImg">文字叠加</string>
    <string name="add_TextToImg_title">请输入需要叠加的文字：</string>
    <string name="location_false">定位失败，请稍后重试!</string>
    <string name="noVideo">无视频</string>
    <string name="clickAgainToExit">再按一次返回键退出预览！</string>
    <string name="repeaterConnect">中继连接</string>
    <string name="mainFrameConnect">主机连接</string>
    <string name="alreadyConnect">已连接</string>
    <string name="exitingApp">正在退出程序</string>
    <string name="exitAppSure">确认退出程序？</string>
    <string name="startRecordFalse">开始录像失败</string>
    <string name="recording">录像</string>
    <string name="stopRecordFalse">停止录像失败</string>
    <string name="isEditPicture">是否编辑图片？</string>
    <string name="noSurpportHaikang">当前设备不支持预览功能！</string>
    <string name="isExitApp">是否退出程序？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="search">搜索</string>
    <string name="outStorage">外置存储</string>
    <string name="inStorage">本机存储</string>
    <string name="defectShow">缺陷描述：</string>
    <string name="playVideoFalse">无法播放该视频</string>
    <string name="playSpeed">播放速度：</string>
    <string name="isDeleteAllFile">是否删除所有选择文件？</string>
    <string name="isdeleteChooseFile">是否删除已选文件？</string>
    <string name="isdelete">是否删除？</string>
    <string name="isdeleteFile">是否删除文件：</string>
    <string name="please_choose_ont_from_list_first">请先选中一个列表选项！</string>
    <string name="chooseQuexianSort">请选择缺陷类型！</string>
    <string name="pleaseChoose">请选择</string>
    <string name="example">示例</string>
    <string name="add">添加</string>
    <string name="change">修改</string>
    <string name="startRecord">开始录像</string>
    <string name="deleteAll">删除所有</string>
    <string name="startOption">起始项</string>
    <string name="lastOption">上一页</string>
    <string name="nextOption">下一页</string>
    <string name="endOption">结束项</string>
    <string name="checkUpdateInfo">正在检查更新信息！</string>
    <string name="updateToVersion">确定更新至版本</string>
    <string name="updateSure">确定更新</string>
    <string name="noNeedUpdate">已经是最新版本！</string>
    <string name="noVersion">版本号未知</string>
    <string name="reTry">重试</string>
    <string name="noInternet">当前网络不可用，请联网后重试！</string>
    <string name="isCheckingInternet">正在检查网络</string>
    <string name="checkingInternet">正在检查网络 . . .</string>
    <string name="peek2sUpdate">Peek2S程序更新！</string>
    <string name="baseSetting">基本设置</string>
    <string name="advanceSetting">高级设置</string>
    <string name="environmentCount">环境统计</string>
    <string name="basic_setting">系统设置</string>
    <string name="set">设置</string>
    <string name="lightSetting">亮度设置</string>
    <string name="systemInfo">系统信息</string>
    <string name="see">查看</string>
    <string name="systemUpdate">系统升级</string>
    <string name="update">升级</string>
    <string name="isUpdateApp">是否更新程序？</string>
    <string name="updateAppAndClosePreview">确定后将关闭程序预览！</string>
    <string name="cameraSetting">摄像机参数设置</string>
    <string name="connectAuto">自动连接WIFI</string>
    <string name="hardwareSetting">硬解码优先</string>
    <string name="saveToSdcard">默认保存至存储卡</string>
    <string name="showRecordBantouBiaoqian">显示录像版头标签</string>
    <string name="noOutSdcard">无可用外置存储设备！</string>
    <string name="alarm">警告</string>
    <string name="sureSaveToSdcard">确定要将文件默认存储位置定为外置存储卡吗？</string>
    <string name="fileDeleteAfterAppDelete">2.软件卸载后，文件将被自动删除！</string>
    <string name="canMove">，且不支持移动！</string>
    <string name="fileSaveTo">1.文件存储位置固定为：</string>
    <string name="fileSaveDangerousIn4">受谷歌政策影响，4.4系统在使用二级存储卡时存在一定风险：</string>
    <string name="name">名称</string>
    <string name="currentValue">当前值</string>
    <string name="minValue">最小值</string>
    <string name="maxValue">最大值</string>
    <string name="state">状态</string>
    <string name="pictureFangdou">图像防抖：</string>
    <string name="kuandongtai">宽动态：</string>
    <string name="Qiangguangyizhi">强光抑制：</string>
    <string name="touwu">透雾：</string>
    <string name="gaoganguang">高感光：</string>
    <string name="videoZhuji">视频主机：</string>
    <string name="controlZhuji">控制主机：</string>
    <string name="unit">单位</string>
    <string name="yali">压力</string>
    <string name="xinghao">型号:</string>
    <string name="version">版本号:</string>
    <string name="shengchanPerson">生产商:</string>
    <string name="myComputor">深圳市博铭维智能科技有限公司</string>
    <string name="downloading">正在下载</string>
    <string name="pause">暂停\n录像</string>
    <string name="stop">停止\n录像</string>
    <string name="alreadyPause">已暂停</string>
    <string name="record_continue">录像继续！</string>
    <string name="record_pause">录像暂停！</string>
    <string name="record_stop">录像完成！</string>
    <string name="recordSetting">录像设置</string>
    <string name="record_can_pause">允许录像暂停</string>
    <string name="record_title">添加录像版头</string>
    <string name="record_title_edit">编辑录像版头</string>
    <string name="file_copy">拷贝</string>
    <string name="file_all_choose">全选</string>
    <string name="choose_copy_path">请选择拷贝路径</string>
    <string name="sdCard">内存卡</string>
    <string name="usb">U盘</string>
    <string name="localSave">机身存储</string>
    <string name="choose_file">请先选择要操作的文件！</string>
    <string name="jiXin_time">时间设置</string>
    <string name="jixin_time_set">主机时间显示</string>
    <string name="set_sameWithterminal">同步终端时间</string>
    <string name="current_jixin_time">主机时间：</string>
    <string name="no_get">未连接主机</string>
    <string name="showRecordHeaderAlways">长时间显示版头重要信息</string>
    <string name="record_open_kanban">开启录像看板</string>
    <string name="record_kanban_stop">看板录制完成</string>
    <string name="kanban_shangxian">看板数量已满</string>
    <string name="next_step">下一步</string>
    <string name="preview">预览</string>
    <string name="kanbanTitle">看板选择</string>
    <string name="welcome_word">无线高清潜望镜</string>
    <string name="company">深圳市博铭维智能科技有限公司</string>
    <string name="add_new_kanban">录制新的看板</string>
    <string name="info_is_empty">请先填入数据！</string>
    <string name="clear_history">清空记录</string>
    <string name="reset">重置</string>
    <string name="record_file_name_model">文件命名模式</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="digtitalMaxSet">数字变倍</string>
    <string name="company_title">制造商:</string>
    <string name="error_pass">密码错误！</string>

    <string name="manufacturer_title">正在修改生产商数据！</string>
    <string name="please_enter_manufacturer_name">请输入生产商名称:</string>
    <string name="please_enter_deviceName">请输入产品名称:</string>

    <string name="pic_quexian_count">${guandaohao}共有${count}个缺陷,详情如下：</string>
    <string name="no_quexian">无缺陷!</string>
    <string name="guandaohaowei">管道号:${guandaohao},</string>
</resources>
