<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true">

    <ImageView
        android:id="@+id/img_cancle_inVisible"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@drawable/img_btn_bg"
        android:clickable="true"
        android:padding="5dp"
        android:src="@mipmap/close_x_yellow" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/img_cancle_inVisible"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_quexian_show_invideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:textColor="@color/colorBase"
                android:textSize="@dimen/pic_show_list"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_container_quexianShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_guandao_xuhao"
                        android:gravity="left"/>
                    <!--
                                    <TextView
                                        style="@style/activity_pic_show_list"
                                        android:text="@string/capture_guandao_id" />-->

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_quexian_style"
                        android:gravity="left" />

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_quexian_name"
                        android:gravity="left" />

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_quexian_grade"
                        android:gravity="left"/>

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_quexian_distance"
                        android:gravity="left" />

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_quexian_clock"
                        android:gravity="left" />

                    <TextView
                        style="@style/activity_pic_show_list"
                        android:text="@string/capture_quexian_length"
                        android:gravity="left"/>


                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recy_picQuexianShowInVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>


</RelativeLayout>