<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/environmentSettingContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_press"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/name"
            android:textColor="@color/colorText"
            android:textSize="@dimen/preview_textsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/currentValue"
            android:textColor="@color/colorText"
            android:textSize="@dimen/preview_textsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/minValue"
            android:textColor="@color/colorText"
            android:textSize="@dimen/preview_textsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/maxValue"
            android:textColor="@color/colorText"
            android:textSize="@dimen/preview_textsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/state"
            android:textColor="@color/colorText"
            android:textSize="@dimen/preview_textsize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/set"
            android:textColor="@color/colorText"
            android:textSize="@dimen/preview_textsize" />

    </LinearLayout>
<!--
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/environment_swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/environment_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
</LinearLayout>
