<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background"
    android:paddingBottom="20dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/sys_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textSet"
        android:text="@string/systemInfo"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:clickable="true"
        android:background="@drawable/img_btn_bg"/>

    <View
        android:id="@+id/fengexian"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sys_title"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorview"/>
    <TextView
        android:id="@+id/xinghao_text"
        android:layout_below="@+id/fengexian"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/small_textSet"
        android:text="@string/xinghao"/>

    <TextView
        android:id="@+id/xinghao_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/small_textSet"
        android:layout_alignRight="@+id/xinghao_text"
        android:layout_alignBaseline="@+id/xinghao_text"
        android:layout_marginRight="20dp"
        android:text="PEEK2S"/>

    <TextView
        android:id="@+id/banbenhao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xinghao_text"
        android:text="@string/version"
        style="@style/small_textSet"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:id="@+id/sys_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        style="@style/small_textSet"
        android:layout_alignRight="@+id/banbenhao"
        android:layout_alignBaseline="@+id/banbenhao"
        android:text="0.0"/>

    <TextView
        android:visibility="visible"
        android:id="@+id/shengchanshang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banbenhao"
        android:text="@string/shengchanPerson"
        style="@style/small_textSet"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"/>
    <TextView
        android:id="@+id/manufacturer_name"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        style="@style/small_textSet"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/shengchanshang"
        android:layout_alignBaseline="@+id/shengchanshang"
        android:text="@string/myComputor"/>

    <!--android:layout_alignRight="@+id/shengchanshang"-->

</RelativeLayout>